--- a/assignment 29th Jan.ipynb
+++ b/assignment 29th Jan.ipynb
@@ -85,7 +85,8 @@
     "d. In the System variables section, selecting the Path variable and clicking on Edit. The next screen will show all the directories that are currently a part of the PATH variable.\n",
     "e. Clicking on New and entering Python’s install directory.\n",
     "\n",
-    "16. I"
+    "16. Is indentation required in python?\n",
+    "Ans. Yes, Indentation is a very important concept of Python because without properly indenting the Python code, you will end up seeing IndentationError and the code will not get compiled."
    ]
   },
   {
@@ -100,9 +101,7 @@
    "id": "fa5357db-a23c-495a-a950-6338de9e4ff5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#afdsfkljafd"
-   ]
+   "source": []
   }
  ],
  "metadata": {
