--- a/assignment 12th feb.ipynb
+++ b/assignment 12th feb.ipynb
@@ -59,28 +59,36 @@
    "id": "1c5226c9-6b57-447f-9771-77f73d1e6273",
    "metadata": {},
    "source": [
-    "If an exception is not handled it will terminate the execution and will produce a traceback.\n",
-    "\n",
-    "E.g.\n",
-    "#following line of code will produce a ZeroDivisionError with the traceback as given further below\n",
-    "\n",
-    "i = 10/0\n",
-    "\n",
-    "\n",
-    "\n",
-    "---------------------------------------------------------------------------\n",
-    "ZeroDivisionError                         Traceback (most recent call last)\n",
-    "Cell In[3], line 1\n",
-    "----> 1 i = 10/0\n",
-    "\n",
-    "ZeroDivisionError: division by zero\n",
-    "\n"
+    "If an exception is not handled it will terminate the execution and will produce a traceback.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "14c7c15d-7ed2-4239-a949-af9501065e1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[31], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m num \u001b[38;5;241m=\u001b[39m \u001b[38;5;241;43m10\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNext line code that is not executed because of ZeroDivisionError\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "num = 10/0\n",
+    "print(\"Next line code that is not executed because of ZeroDivisionError\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14c7c15d-7ed2-4239-a949-af9501065e1b",
+   "id": "98ca2fb2-bd89-41b5-9b5d-1940ff6dcb92",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -104,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "51cde08d-7ecf-4ac7-8e17-b90a46d2286b",
    "metadata": {},
    "outputs": [
@@ -123,8 +131,7 @@
     "        read_data = file.read()\n",
     "except FileNotFoundError as fnf_error:\n",
     "    print(fnf_error)\n",
-    "    \n",
-    "#output from above code will be [Errno 2] No such file or directory: 'file.log'"
+    "    \n"
    ]
   },
   {
@@ -163,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "29e21085-186d-465c-9f54-59aca05bbc36",
    "metadata": {},
    "outputs": [
@@ -176,16 +183,6 @@
       "Sorry ! You are dividing by zero \n",
       "This is always executed\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "' \\noutput from above code is as follows\\n\\nYeah ! Your answer is : 1\\nThis is always executed\\nSorry ! You are dividing by zero \\nThis is always executed\\n\\n'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -200,17 +197,7 @@
     "        print('This is always executed')  \n",
     "        \n",
     "divide(3, 2)\n",
-    "divide(3, 0)\n",
-    "\n",
-    "\"\"\" \n",
-    "output from above code is as follows\n",
-    "\n",
-    "Yeah ! Your answer is : 1\n",
-    "This is always executed\n",
-    "Sorry ! You are dividing by zero \n",
-    "This is always executed\n",
-    "\n",
-    "\"\"\""
+    "divide(3, 0)\n"
    ]
   },
   {
@@ -272,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "2f2e93ac-62b7-4795-a202-54124c335049",
    "metadata": {},
    "outputs": [
@@ -328,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "02e3b0bd-f695-4049-9677-bb64bf9fea32",
    "metadata": {},
    "outputs": [
@@ -339,7 +326,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNoLoadOnTruckError\u001b[0m                        Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[25], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m truck_no \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m12345\u001b[39m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m load \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m---> 12\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m NoLoadOnTruckError(truck_no)\n",
+      "Cell \u001b[0;32mIn[29], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m truck_no \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m12345\u001b[39m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m load \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m---> 12\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m NoLoadOnTruckError(truck_no)\n",
       "\u001b[0;31mNoLoadOnTruckError\u001b[0m: The 12345 is empty"
      ]
     }
